third_party/rust/chromium_crates_io/vendor/cxx-1.0.143/tests/ui/extern_fn_abi.stderr
error: explicit ABI on extern function is not supported
 --> tests/ui/extern_fn_abi.rs:4:9
  |
4 |         extern "Java" fn f();
  |         ^^^^^^^^^^^^^
